--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "pug-cli": "^1.0.0-alpha6",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.4.14"
+  },
+  "dependencies": {
+    "tw-elements": "^2.0.0"
   }
 }
