--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "autoprefixer": "^10.4.0",
     "browser-sync": "^2.27.7",
     "cpx": "^1.5.0",
+    "gulp": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.2",
     "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
